@@ -1,3 +1,7 @@
+Fri May  9 22:48:04 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Fri May  9 22:45:12 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
